sidebar to prod

--- a/app5K/__alps/app/style/app_core.scss
+++ b/app5K/__alps/app/style/app_core.scss
@@ -69,6 +69,12 @@ $width--aside-column-extended: 32rem;
     background-repeat: no-repeat;
     background-position: center center;
 }
+@mixin disable-text-selection {
+    -webkit-user-select: none;  /* Chrome all / Safari all */
+    -moz-user-select: none;     /* Firefox all */
+    -ms-user-select: none;      /* IE 10+ */
+    user-select: none;          /* Likely future */
+}
 
 
 
