--- a/app5K/__alps/app/style/app_html_base.scss
+++ b/app5K/__alps/app/style/app_html_base.scss
@@ -73,10 +73,11 @@ img, svg {
 audio, canvas, iframe, img, svg, video {
   vertical-align: middle;
 }
-hr {
-  box-sizing: content-box;
-  height: 0;
-  overflow: visible;
+hr { // <hr> as empty spacer
+    min-height: 3rem;
+    border: 0;
+    background: transparent;
+    box-shadow: none;
 }
 abbr[title] {
   border-bottom: none;
