--- a/app5K/__alps/app/style/design_app_default.scss
+++ b/app5K/__alps/app/style/design_app_default.scss
@@ -58,20 +58,34 @@ body {
     h1, h2, h3, h4, h5, h6 {
         line-height: 1.1;
         font-family: $font-family-sans-serif;
-        font-weight: 700;
+        font-weight: bolder;
         @include word-wrap;
     }
 
-    h1 { font-size: 2.35em; }
-    h2 { font-size: 1.75em; }
-    h3 { font-size: 1.5em; }
-    h4 { font-size: 1.25em; }
-    h5 { font-size: 1em; }
-    h6 { font-size: 1em; }
+    h1 {
+        font-size:   2.35em;
+        font-weight: 700;
+    }
+    h2 {
+        font-size:   1.75em;
+        font-weight: 700;
+    }
+    h3 {
+        font-size:   1.25em;
+        font-weight: inherit;
+    }
+    h4 { font-size:  1em; }
+    h5 { font-size:  inherit; }
+    h6 { // as invisible header
+        line-height: inherit;
+        font-size:   inherit;
+        font-weight: inherit;
+        font-family: inherit;
+    }
 
     small, sub, sup { font-size: 75%; }
-
-    hr { border-color: #2c8898; }
+    
+    em { opacity: 0.66; }
 
     a {
         color: $color-blossom;
@@ -82,17 +96,34 @@ body {
 
     }
 
-    ul {
+    ul, ol {
         list-style-position: outside;
         padding-left: 0;
     }
-    li+li { margin-top: 0.4em; }
+    li+li {
+        margin-top: 0.4em;
+    }
+    li li {
+        list-style: square;
+    }
+
+    dl {
+        @extend %grid_layout--type-ab;
+        grid-gap: 0 1*$dim;
+        dt,dd {
+            margin: 0;
+        }
+    }
 
     blockquote {
         font-style: italic;
         margin-left: 1.5em;
         padding-left: 1em;
         border-left: 3px solid $color-blossom;
+    }
+
+    hr {
+        min-height: 3.2rem;
     }
 
     /* Pre and Code */
@@ -113,7 +144,7 @@ body {
 
     code {
         font-size: 0.9em;
-        padding: 0 0.5em;
+        padding: 0 1*$dim;
         background-color: $color-bg-alt;
         white-space: pre-wrap;
     }
@@ -149,6 +180,33 @@ body {
         border-bottom: 1px solid $color-bg-alt;
     }
 
+    /* Form elements as content */
+
+    button {
+        border: 0;
+        box-shadow: none;
+        width: 100%;
+    }
+
 }
+[design-for-markup] { @extend .design-for-markup; }
+
+/* named components */
+
+.role-code {
+    background-color: $color-bg-alt;
+    padding: $margin-def;
+    grid-column: overmain;
+    border: 0;
+    cursor: auto;
+}
+code.role-code {
+    padding-left:   $margin-def;
+    padding-right:  $margin-def;
+    padding-bottom: 1.618em; // ← <code> for beautiful </code>
+}
+[role-code] { @extend .role-code; }
+
+
 
 /* ------------------------------------ end of default_design */
