--- a/appDev/app6K/app/style/app.css
+++ b/appDev/app6K/app/style/app.css
@@ -1,7 +1,93 @@
+/* ------------------------------------ screen sizes */
+/**/
+/* ------------------------------------ system colors */
+/**/
 /* ------------------------------------ app constructor */
 /* EOF: app constructor */
+/*
+    base css 1003 Monica De Gennaro
+    v2018.11.23
+*/
+/* ------------------------------------ box model */
+*, *:before, *:after {
+  box-sizing: inherit; }
+
+html {
+  box-sizing: border-box; }
+
+html, body {
+  margin: 0;
+  padding: 0; }
+
+/* ------------------------------------ markup defaults */
+*, ::before, ::after {
+  background-repeat: no-repeat; }
+
+nav ul, nav ol {
+  padding: 0;
+  margin: 0;
+  list-style-type: none; }
+
+details, article, aside, footer, header, nav, section, main {
+  display: block; }
+
+figure, figcaption, fieldset, legend {
+  display: block;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  white-space: normal; }
+
+summary {
+  display: list-item; }
+
+canvas {
+  display: inline-block; }
+
+[hidden], template {
+  display: none; }
+
+/* ------------------------------------ content defaults */
+html {
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+  cursor: default; }
+
+body {
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased; }
+
+a, area, button, input, label, select, summary, textarea, [tabindex] {
+  -ms-touch-action: manipulation;
+  touch-action: manipulation; }
+
+a {
+  background-color: transparent;
+  text-decoration: none;
+  color: inherit; }
+
+img, svg {
+  display: block;
+  border: none;
+  max-width: 100%; }
+
+audio, canvas, iframe, img, svg, video {
+  vertical-align: middle; }
+
+hr {
+  min-height: 3.2rem;
+  border: 0;
+  background: transparent;
+  box-shadow: none; }
+
+abbr[title] {
+  border-bottom: none;
+  text-decoration: underline;
+  text-decoration: underline dotted; }
+
+/* ------------------------------------ end of html base */
 /* ==============================================================
- # Workers are used with other components
+ # used by components
 ============================================================== */
 .kliker {
   -webkit-user-select: none;
@@ -35,11 +121,236 @@
   opacity: 0; }
 
 /**/
+/* EOF: workers */
+.chapter {
+  position: relative; }
+  .chapter .chapter-top {
+    position: sticky;
+    top: 0; }
+
 [content-action] {
   display: none; }
 
+[bg] {
+  background-color: rgba(14, 20, 47, 0.7); }
+
+.dev-panel, dev-panel {
+  background-color: rgba(14, 20, 47, 0.7);
+  color: white;
+  font-size: 2em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-content: center; }
+
+.dev-item, dev-item {
+  background-color: rgba(14, 20, 47, 0.7);
+  color: white;
+  font-size: 2em;
+  padding: 0 0.4em;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  align-content: center; }
+
+.dev-box, dev-box {
+  background-color: rgba(14, 20, 47, 0.7);
+  color: white;
+  font-size: 2em;
+  width: 100%;
+  max-width: 36rem;
+  min-height: 18rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-content: center; }
+
 /**/
-/* EOF: workers */
+/* ------------------------------------ body box model */
+.body-wrap {
+  min-height: 100%;
+  margin-top: 0;
+  margin-bottom: 0;
+  display: flex;
+  flex-direction: column; }
+
+.body-wrap-header {
+  position: sticky;
+  top: 0;
+  background-color: white; }
+
+.body-wrap-footer {
+  margin-top: auto; }
+
+@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+  html.has-body-wrap {
+    display: flex;
+    flex-direction: column; } }
+
+/* */
+/*
+    app grid system
+    v2018.11.23
+*/
+.layout-for-markup, .block, .block-box, .grid-leftside, .grid-rightside, .layout-for-article, .use-grid {
+  display: grid;
+  grid-auto-rows: min-content;
+  grid-auto-flow: row;
+  grid-template-columns:  [full-start merge-start overmain-start main-start aside-start]  auto  [full-end merge-end overmain-end main-end aside-end] ;
+  align-items: start;
+  grid-gap: 1.8rem 0; }
+  .layout-for-markup *, .block *, .block-box *, .grid-leftside *, .grid-rightside *, .layout-for-article *, .use-grid * {
+    grid-column: main; }
+  @supports (grid-gap: 2.4rem) {
+    .layout-for-markup *, .block *, .block-box *, .grid-leftside *, .grid-rightside *, .layout-for-article *, .use-grid * {
+      margin-top: 0;
+      margin-bottom: 0; } }
+
+.layout-for-markup, .block, .block-box, .grid-leftside, .grid-rightside {
+  grid-template-columns:  [full-start merge-start overmain-start]  2.4rem  [main-start aside-start]  auto  [main-end aside-end]  2.4rem  [full-end merge-end overmain-end] ; }
+
+.layout-for-article, .use-grid {
+  grid-template-columns:  [full-start merge-start overmain-start]  2.4rem  [main-start aside-start]  auto  [main-end aside-end]  2.4rem  [full-end merge-end overmain-end] ; }
+  @media (min-width: 901px) {
+    .layout-for-article, .use-grid {
+      grid-template-columns:  [full-start]  minmax(0, 1fr)  [merge-start overmain-start]  2.4rem  [main-start]  minmax(0, 64rem)  [main-end]  2.4rem  [overmain-end]  2.4rem  [aside-start]  26rem  [aside-end]  2.4rem  [merge-end]  minmax(0, 1fr)  [full-end] ; } }
+
+.use-grid {
+  grid-column: full; }
+
+.grid-leftside {
+  grid-column: full-start / overmain-end; }
+  @media (min-width: 901px) {
+    .grid-leftside {
+      grid-template-columns:  [full-start]  minmax(0, 1fr)  [merge-start overmain-start aside-start]  2.4rem  [main-start]  minmax(0, 64rem)  [main-end]  2.4rem  [full-end merge-end overmain-end aside-end] ; } }
+
+.grid-rightside {
+  grid-column: overmain-start / full-end; }
+  @media (min-width: 901px) {
+    .grid-rightside {
+      grid-template-columns:  [full-start merge-start overmain-start]  2.4rem  [main-start]  minmax(0, 64rem)  [main-end]  2.4rem  [overmain-end]  2.4rem  [aside-start]  26rem  [aside-end]  2.4rem  [merge-end]  minmax(0, 1fr)  [full-end] ; } }
+
+.layer {
+  grid-column: full; }
+
+.block, .block-box {
+  grid-column: overmain; }
+
+.block-box {
+  padding-top: 1.8rem;
+  padding-bottom: 1.8rem; }
+
+/*
+.layer {
+    grid-column: full;
+}
+.layer-row {
+    @extend %grid_layout--base;
+    grid-template-columns: inherit;
+    grid-column: full;
+}
+.layer-block {
+    @extend %grid_layout-for-markup;
+    grid-column: full;
+}
+
+.block {
+    @extend %grid_layout-for-markup;
+    grid-column: overmain;
+}
+.block-row {
+    @extend %grid_layout-for-markup;
+    grid-column: merge;
+}
+.block-left {
+    @extend %grid_layout-for-markup;
+    @media ($screenForArticleLayout) {
+        grid-template-columns: $grid_formula--article-left-wrapped;
+    }
+    grid-column: full-start / overmain-end;
+}
+.block-right {
+    @extend %grid_layout-for-markup;
+    @media ($screenForArticleLayout) {
+        grid-template-columns: $grid_formula--article-right-wrapped;
+    }
+    grid-column: overmain-start / full-end;
+}
+*/
+/* ------------------------------------ eof grid */
+/* ------------------------------------ layout screen */
+/*
+```html
+    <section class="fullscreen">
+        <header class="fullscreen-top"></header>
+        <section class="fullscreen-body"></section>
+        <footer class="fullscreen-bottom"></footer>
+    </section>
+```
+*/
+.fullscreen {
+  display: block;
+  width: 100%;
+  min-height: 100vh;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-content: stretch;
+  align-items: stretch; }
+  .fullscreen.has-fixed-background:before {
+    position: fixed;
+    z-index: -1;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    pointer-events: none;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center; }
+  .fullscreen .fullscreen-top {
+    order: 1;
+    flex-grow: 0; }
+  .fullscreen .fullscreen-body {
+    order: 2;
+    flex-grow: 2; }
+  .fullscreen .fullscreen-bottom {
+    order: 3;
+    flex-grow: 0; }
+  .fullscreen .fullscreen-body,
+  .fullscreen .fullscreen-bottom {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center; }
+
+/* */
+/* ==============================================================
+ # Sidebars & Friends
+============================================================== */
+.sidebar {
+  position: fixed;
+  z-index: 3;
+  top: 0;
+  bottom: 0;
+  left: 100%;
+  width: 100%;
+  overflow: auto;
+  transform: translateX(0);
+  transition: transform 200ms ease-in;
+  background-color: white; }
+  @media screen and (min-width: 44rem) {
+    .sidebar {
+      max-width: 38rem; } }
+  .sidebar.is-active {
+    transition-timing-function: ease-out;
+    transform: translateX(-100%); }
+
+/**/
+/* EOF: Sidebars */
 /* ==============================================================
  # Describe HTML & BODY
 ============================================================== */
@@ -66,26 +377,3 @@
 
 /* */
 /* EOF: layout-screen */
-/* ==============================================================
- # Sidebars & Friends
-============================================================== */
-.sidebar {
-  position: fixed;
-  z-index: 3;
-  top: 0;
-  bottom: 0;
-  left: 100%;
-  width: 100%;
-  overflow: auto;
-  transform: translateX(0);
-  transition: transform 200ms ease-in;
-  background-color: white; }
-  @media screen and (min-width: 44rem) {
-    .sidebar {
-      max-width: 38rem; } }
-  .sidebar.is-active {
-    transition-timing-function: ease-out;
-    transform: translateX(-100%); }
-
-/**/
-/* EOF: Sidebars */
